Fix javadoc issues and richer release.properties

--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,19 @@
 #release configuration
-#Thu Nov 14 14:44:50 IST 2019
+#Thu Nov 14 14:47:12 IST 2019
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-exec.additionalArguments=-Dgpg.passphrase\=Messagenie_17
 remoteTagging=true
+project.scm.com.twelfthmile.yuga\:yuga.connection=scm\:git\:git\://https\://github.com/messai-engineering/Yuga.git
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=false
-completedPhase=check-poms
+project.scm.com.twelfthmile.yuga\:yuga.developerConnection=scm\:git\:git@github.com\:messai-engineering/Yuga.git
+completedPhase=end-release
 scm.url=scm\:git\:git@github.com\:messai-engineering/Yuga.git
+project.scm.com.twelfthmile.yuga\:yuga.url=https\://github.com/messai-engineering/Yuga
+exec.additionalArguments=-Dgpg.passphrase\=Messagenie_17
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=false
+scm.tag=nexus-push
+project.rel.com.twelfthmile.yuga\:yuga=1.0.8
+project.dev.com.twelfthmile.yuga\:yuga=1.0.9-SNAPSHOT
+project.scm.com.twelfthmile.yuga\:yuga.tag=HEAD
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
