--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,6 @@
         <connection>scm:git:git://https://github.com/messai-engineering/Yuga.git</connection>
         <developerConnection>scm:git:git@github.com:messai-engineering/Yuga.git</developerConnection>
         <url>https://github.com/messai-engineering/Yuga</url>
-        <tag>HEAD</tag>
+        <tag>yuga-1.0.9</tag>
     </scm>
 </project>
