--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,19 @@
 #release configuration
-#Thu Nov 14 16:46:20 IST 2019
+#Mon Nov 18 14:55:57 IST 2019
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-exec.additionalArguments=-Dgpg.passphrase\=Messagenie_17
+project.dev.in.messai\:yuga=1.0.11-SNAPSHOT
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=false
-completedPhase=check-poms
+project.scm.in.messai\:yuga.tag=yuga-1.0.10
+completedPhase=end-release
+project.rel.in.messai\:yuga=1.0.10
 scm.url=scm\:git\:git@github.com\:messai-engineering/Yuga.git
+exec.additionalArguments=-Dgpg.passphrase\=Messagenie_17 -P ossrh
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=false
+project.scm.in.messai\:yuga.url=https\://github.com/messai-engineering/Yuga
+project.scm.in.messai\:yuga.connection=scm\:git\:git\://https\://github.com/messai-engineering/Yuga.git
+scm.tag=yuga-1.0.10
 exec.snapshotReleasePluginAllowed=false
+project.scm.in.messai\:yuga.developerConnection=scm\:git\:git@github.com\:messai-engineering/Yuga.git
 preparationGoals=clean verify
