--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>in.messai</groupId>
     <artifactId>yuga</artifactId>
-    <version>1.0.14-SNAPSHOT</version>
+    <version>1.0.14</version>
 
     <name>Yuga Date Parser</name>
     <description>
