--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>in.messai</groupId>
     <artifactId>yuga</artifactId>
-    <version>1.0.14</version>
+    <version>1.0.15</version>
 
     <name>Yuga Date Parser</name>
     <description>
@@ -109,6 +109,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                     <doclint>none</doclint>
                     <additionalOptions>
                         <additionalOption>-Xdoclint:none</additionalOption>
