--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                     <localCheckout>true</localCheckout>
                     <pushChanges>false</pushChanges>
                     <mavenExecutorId>forked-path</mavenExecutorId>
-                    <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+                    <arguments>-Dgpg.passphrase=${gpg_passphrase}</arguments>
                 </configuration>
                 <dependencies>
                     <dependency>
